kubernetes/day3_ingress_project/service_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deploy-nginx
  name: nginx-service
  namespace: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: deploy-nginx
